--- a/Proposals/bib.bib
+++ b/Proposals/bib.bib
@@ -1,17 +1,27 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mac Outreach Admin at 2018-01-29 21:28:47 -0500 
+%% Created for Mac Outreach Admin at 2018-01-29 22:15:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@webpage{tom10,
+	Author = {Tom10},
+	Date-Added = {2018-01-30 03:03:10 +0000},
+	Date-Modified = {2018-01-30 03:12:11 +0000},
+	Howpublished = {\url{https://stackoverflow.com/questions/3937663/2d-point-clustering}},
+	Title = {2d Point Clustering},
+	Url = {https://stackoverflow.com/questions/3937663/2d-point-clustering},
+	Year = {2012}}
+
 @url{plosblog2014,
 	Author = {Roberts, Roli},
 	Date-Added = {2018-01-30 02:17:52 +0000},
-	Date-Modified = {2018-01-30 02:23:37 +0000},
+	Date-Modified = {2018-01-30 03:14:13 +0000},
+	Howpublished = {\url{http://blogs.plos.org/biologue/2013/05/13/how-do-you-like-your-fish-phylogenised/}},
 	Title = {How do you like your fish? {P}hylogenised!},
 	Url = {http://blogs.plos.org/biologue/2013/05/13/how-do-you-like-your-fish-phylogenised/},
 	Year = {2013}}
@@ -62,7 +72,8 @@
 @webpage{michseagr2018,
 	Author = {{University of Michigan}; {Michigan State University}},
 	Date-Added = {2018-01-28 20:59:17 +0000},
-	Date-Modified = {2018-01-29 18:16:39 +0000},
+	Date-Modified = {2018-01-30 03:12:34 +0000},
+	Howpublished = {\url{http://www.miseagrant.umich.edu/}},
 	Title = {Michigan Sea Grant},
 	Url = {http://www.miseagrant.umich.edu/},
 	Year = {2018}}
@@ -79,10 +90,13 @@
 	Volume = {33},
 	Year = {2000}}
 
-@webpage{usgs2018,
+@url{usgs2018,
+	Author = {{United States Geological Survey}},
 	Date-Added = {2018-01-26 17:50:23 +0000},
-	Date-Modified = {2018-01-26 17:50:50 +0000},
+	Date-Modified = {2018-01-30 03:15:34 +0000},
+	Howpublished = {\url{https://www1.usgs.gov/obis-usa/ipt/resource?r=usgs_glsc_rvcat_trawl}},
 	Month = {1},
+	Title = {{USGS Great Lakes Science Center Research Vessel Catch Information System Trawl}},
 	Url = {https://www1.usgs.gov/obis-usa/ipt/resource?r=usgs_glsc_rvcat_trawl},
 	Year = {2018},
 	Bdsk-Url-1 = {https://www1.usgs.gov/obis-usa/ipt/resource?r=usgs_glsc_rvcat_trawl}}
@@ -101,7 +115,8 @@
 @webpage{michigan2017,
 	Author = {Ronald Kinnunen},
 	Date-Added = {2018-01-26 14:35:05 +0000},
-	Date-Modified = {2018-01-30 02:24:16 +0000},
+	Date-Modified = {2018-01-30 03:13:51 +0000},
+	Howpublished = {\url{http://msue.anr.msu.edu/news/great_lakes_prey_fish_populations_declining_msg17_kinnunen17}},
 	Journal = {Michigan State University Extension},
 	Keywords = {28},
 	Month = {February},
