additions to proposal

--- a/Proposals/Chris/Proposal.tex
+++ b/Proposals/Chris/Proposal.tex
@@ -113,7 +113,9 @@ c) & d) \\
 
 \clearpage
 \section{Project Plan}
+\subsection{Milestones}
 The following milestones will help inform our progress towards completing the goals. Given that the team contains 5 people, the team will be divided up into two subteams of 2-3 people for maximum efficiency. Individual members' tasks can be decided by the subteams based on the progress of that team towards completing the next milestone's goal(s). Subteams should be in constant communication and in agreement about the inputs and outputs of modules to avoid the need rewriting of code.
+
 
 \begin{table}[h]
 	\centering
@@ -145,6 +147,35 @@ The following milestones will help inform our progress towards completing the go
 \end{table}
 
 \noindent While this schedule provides a good reference and a way to monitor progress, team members should be flexible and remain in communication to ensure the project is kept on schedule. For example, if a milestone is reached before its given date, the next milestone should start development early. Approximately 1-2 weeks have been purposely left as padding at the end in case of unforeseen circumstances.
+
+
+\subsection{Team Roles}
+\begin{table}[h]
+	\centering
+	\begin{tabular}{p{0.20\hsize}p{0.30\hsize}p{0.10\hsize}}
+		\toprule
+		\textbf{Member} & \textbf{Role} & \textbf{Subteam}\\
+		\midrule
+		Christoper Schankula & Team Lead & A\\		
+		\midrule
+		Ray Liu & TA \& Professor Liaison & A\\	
+		\midrule
+		Winning Liang & Project Log Admin & A\\		
+		\midrule
+		Haley Glavina & Meeting Minutes Admin & B\\	
+		\midrule
+		Lawrence Chung & Head of Booking & B\\
+		\bottomrule
+	\end{tabular}
+\end{table}
+
+\subsection{Workflow}
+
+The team will use \textbf{GitLab} as the primary way of sharing code and keeping up to date. The Git repository will be split into two branches, in addition to the \textit{master} branch: \textit{TeamA} and \textit{TeamB}. Each Subteam will develop on their respective branch, then issue merge requests so the team can evaluate and approve merges into the \textit{master} branch.
+
+\subsection{Communication}
+
+The team will use \textbf{Slack} and \textbf{Facebook Messenger} as primary and secondary means of communication. A Slack group has been created and each of the members were invited to it. \textbf{Google Drive} will be used to keep track of documentation such as the \textit{Project Log} and meeting minutes.
 
 \clearpage
 \bibliographystyle{apa}
