change header of proposal

--- a/Proposals/Chris/Proposal.tex
+++ b/Proposals/Chris/Proposal.tex
@@ -23,7 +23,7 @@
 \begin{document}
 
 \title{TrawlExpert: Tool for Watershed Biological Research}
-\author{Trawlstars Inc. (Group 11) \\ Lab section: L01  \\ Christopher W. Schankula, 400026650 \\ Haley Glavina, 001412343 \\ Winnie Liang, 400074498 \\ Ray Liu, 400055250 \\ Lawrence Chung, 400014482}
+\author{Trawlstars Inc. (Group 11) \\ Lab section: L01  \\ Christopher W. Schankula, 400026650, schankuc \\ Haley Glavina, 001412343, glavinhc \\ Winnie Liang, 400074498, liangw15 \\ Ray Liu, 400055250, liuc40 \\ Lawrence Chung, 400014482, chungl1}
 
 \maketitle
 \noindent\textit{By virtue of submitting this document I electronically sign and date that the work being submitted is my own individual work.}
